Baseline design change. Remove old photo. Add new ones.

--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -172,6 +172,14 @@
       <Name>FrameWork</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Artwork\final1.png" />
+    <Content Include="Artwork\final2.png" />
+    <Content Include="Artwork\final3.png" />
+    <Content Include="Artwork\final4.png" />
+    <Content Include="Artwork\final5.png" />
+    <Content Include="Artwork\WAR.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
