New account creation button via the launcher.

--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -182,6 +182,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Artwork\background.png" />
     <Content Include="Artwork\button.png" />
     <Content Include="Artwork\final1.png" />
     <Content Include="Artwork\final2.png" />
