Added more details to the Character object

--- a/ApocalypseAPI/Properties/launchSettings.json
+++ b/ApocalypseAPI/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       }
     },
     "ApocalypseAPI": {
-      "commandName": "Project",
+      "commandName": "Executable",
       "launchBrowser": true,
       "launchUrl": "api/values",
       "environmentVariables": {
