Updated mysql.data dep in CharacterUtility

--- a/CharacterUtility/packages.config
+++ b/CharacterUtility/packages.config
@@ -3,8 +3,10 @@
   <package id="CommandLineParser" version="2.2.1" targetFramework="net452" />
   <package id="Dapper" version="1.50.5" targetFramework="net452" />
   <package id="Evolve" version="1.8.0" targetFramework="net452" />
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.4" targetFramework="net452" />
   <package id="Microsoft.Extensions.DependencyModel" version="2.0.4" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.11" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="NLog" version="4.5.5" targetFramework="net452" />
 </packages>
