--- a/CharacterUtility/App.config
+++ b/CharacterUtility/App.config
@@ -1,14 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
     <add key="WAR.ConnectionString" value="Server=127.0.0.1;Database=war_characters;Uid=root;Pwd=thetrooper;" />
-    <add key="DefaultOutputFile" value="g:\\temp\\output.txt"/>
-    <add key="AccountUserCode" value="az"/>
-    <add key="ItemsetDirectory" value="itemset"/>
-    <add key="TemplateDirectory" value="template"/>
+    <add key="DefaultOutputFile" value="g:\\temp\\output.txt" />
+    <add key="AccountUserCode" value="az" />
+    <add key="ItemsetDirectory" value="itemset" />
+    <add key="TemplateDirectory" value="template" />
     
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.11.0" newVersion="8.0.11.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
