--- a/CharacterUtility/packages.config
+++ b/CharacterUtility/packages.config
@@ -4,9 +4,16 @@
   <package id="Dapper" version="1.50.5" targetFramework="net452" />
   <package id="Evolve" version="1.8.0" targetFramework="net452" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
-  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.4" targetFramework="net452" />
-  <package id="Microsoft.Extensions.DependencyModel" version="2.0.4" targetFramework="net452" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.11" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
-  <package id="NLog" version="4.5.5" targetFramework="net452" />
+  <package id="NLog" version="4.5.6" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net452" />
+  <package id="xunit.analyzers" version="0.9.0" targetFramework="net452" />
+  <package id="xunit.assert" version="2.3.1" targetFramework="net452" />
+  <package id="xunit.core" version="2.3.1" targetFramework="net452" />
+  <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net452" />
+  <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net452" />
 </packages>
