--- a/ApocalypseAPI/ApocalypseAPI.csproj
+++ b/ApocalypseAPI/ApocalypseAPI.csproj
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApocalypeAPI.Shared\ApocalypseAPI.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
