--- a/ApocalypseAPI.Test/ApocalypseAPI.Test.csproj
+++ b/ApocalypseAPI.Test/ApocalypseAPI.Test.csproj
@@ -13,7 +13,7 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\ApocalypeAPI.Shared\ApocalypseAPI.Shared.csproj" />
+    <ProjectReference Include="..\ApocalypseAPI.Common\ApocalypseAPI.Common.csproj" />
   </ItemGroup>
 
 </Project>
