--- a/Launcher/packages.config
+++ b/Launcher/packages.config
@@ -2,5 +2,8 @@
 <packages>
   <package id="Costura.Fody" version="2.0.1" targetFramework="net452" />
   <package id="Fody" version="3.0.3" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net452" />
   <package id="NLog" version="4.5.6" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
 </packages>
