--- a/WorldServer/NLog.config
+++ b/WorldServer/NLog.config
@@ -11,13 +11,17 @@
             layout="${longdate} ${uppercase:${level}} ${callsite} :: ${message}" />-->
   <!--<target name="file" type="File" fileName="${basedir}/log.txt" />-->
   <targets>
-   <default-wrapper xsi:type="AsyncWrapper" timeToSleepBetweenBatches="0" overflowAction="Block" />
+    <default-wrapper xsi:type="AsyncWrapper" timeToSleepBetweenBatches="0" overflowAction="Block" />
     <target name="logfile" xsi:type="File" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
+    <target name="rewardLogToFile" xsi:type="File" fileName="${basedir}/logs/REWARD_${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
+
     <target name="logconsole" xsi:type="ColoredConsole" layout="${shortdate} ${uppercase:${level}} ${message}" />
   </targets>
 
   <rules>
+    <logger name="RewardLogger" minlevel="Trace" writeTo="rewardLogToFile" />
     <logger name="*" minlevel="Debug" writeTo="logfile" />
     <logger name="*" minlevel="Debug" writeTo="logconsole" />
   </rules>
