--- a/WorldServer/NLog.config
+++ b/WorldServer/NLog.config
@@ -16,11 +16,14 @@
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
     <target name="rewardLogToFile" xsi:type="File" fileName="${basedir}/logs/REWARD_${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
+    <target name="deathLogToFile" xsi:type="File" fileName="${basedir}/logs/DEATH_${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
 
     <target name="logconsole" xsi:type="ColoredConsole" layout="${shortdate} ${uppercase:${level}} ${message}" />
   </targets>
 
   <rules>
+    <logger name="DeathLogger" minlevel="Trace" writeTo="deathLogToFile" />
     <logger name="RewardLogger" minlevel="Trace" writeTo="rewardLogToFile" />
     <logger name="*" minlevel="Debug" writeTo="logfile" />
     <logger name="*" minlevel="Debug" writeTo="logconsole" />
