--- a/WorldServer/NLog.config
+++ b/WorldServer/NLog.config
@@ -18,6 +18,8 @@
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
     <target name="deathLogToFile" xsi:type="File" fileName="${basedir}/logs/DEATH_${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
+    <target name="rvrLogToFile" xsi:type="File" fileName="${basedir}/logs/RVR_${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
 
     <target name="logconsole" xsi:type="ColoredConsole" layout="${shortdate} ${uppercase:${level}} ${message}" />
   </targets>
@@ -25,6 +27,7 @@
   <rules>
     <logger name="DeathLogger" minlevel="Trace" writeTo="deathLogToFile" />
     <logger name="RewardLogger" minlevel="Trace" writeTo="rewardLogToFile" />
+    <logger name="RVRProgressionLogger" minlevel="Trace" writeTo="rvrLogToFile" />
     <logger name="*" minlevel="Debug" writeTo="logfile" />
     <logger name="*" minlevel="Debug" writeTo="logconsole" />
   </rules>
