Renamed NewDawn -> Apoc for Battlefronts

--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -256,23 +256,23 @@
     <Compile Include="World\Battlefronts\IBattlefront.cs" />
     <Compile Include="World\Battlefronts\Legacy\ProximityBattlefront.cs" />
     <Compile Include="World\Battlefronts\Legacy\ProximityProgressingBattlefront.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\AAOTracker.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\BattlefrontConstants.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\IBattlefrontManager.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\NewDawnBattlefieldObjective.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\NewDawnBattlefront.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\LowerTierBattlefrontManager.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\RacialPairIdentifier.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\RacialPairManager.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\RVRRewardManager.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\UpperTierBattlefrontManager.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\INewDawnBattlefront.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\NewDawnCommunications.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\ProximityEngine.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\RacialPair.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\RacialPairHelper.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\VictoryPoint.cs" />
-    <Compile Include="World\Battlefronts\NewDawn\VictoryPointProgress.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\AAOTracker.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\BattlefrontConstants.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\IBattlefrontManager.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\ApocBattlefieldObjective.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\ApocBattleFront.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\LowerTierBattlefrontManager.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\RacialPairIdentifier.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\RacialPairManager.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\RVRRewardManager.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\UpperTierBattlefrontManager.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\IApocBattleFront.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\ApocCommunications.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\ProximityEngine.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\RacialPair.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\RacialPairHelper.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\VictoryPoint.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\VictoryPointProgress.cs" />
     <Compile Include="World\Battlefronts\Objectives\IBattlefrontFlag.cs" />
     <Compile Include="World\Battlefronts\Objectives\ObjectivePortalsMgr.cs" />
     <Compile Include="World\Battlefronts\Objectives\PortalToObjective.cs" />
