Fixed battlefront Ids, added .campaign progressionstatus command

--- a/WorldServer/NLog.config
+++ b/WorldServer/NLog.config
@@ -27,10 +27,10 @@
   </targets>
 
   <rules>
-    <logger name="DeathLogger" minlevel="Trace" writeTo="deathLogToFile" />
-    <logger name="RewardLogger" minlevel="Trace" writeTo="rewardLogToFile" />
-    <logger name="RVRProgressionLogger" minlevel="Trace" writeTo="rvrLogToFile" />
-    <logger name="BattlefrontLogger" minlevel="Trace" writeTo="battlefrontLogToFile" />
+    <logger name="DeathLogger" minlevel="Debug" writeTo="deathLogToFile" />
+    <logger name="RewardLogger" minlevel="Debug" writeTo="rewardLogToFile" />
+    <logger name="RVRProgressionLogger" minlevel="Debug" writeTo="rvrLogToFile" />
+    <logger name="BattlefrontLogger" minlevel="Debug" writeTo="battlefrontLogToFile" />
     <logger name="*" minlevel="Debug" writeTo="logfile" />
     <logger name="*" minlevel="Debug" writeTo="logconsole" />
   </rules>
