Rename changes for Campaign.
Added DEV / PRD start flag

--- a/WorldServer/NLog.config
+++ b/WorldServer/NLog.config
@@ -20,7 +20,7 @@
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
     <target name="rvrLogToFile" xsi:type="File" fileName="${basedir}/logs/RVR_${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
-    <target name="battlefrontLogToFile" xsi:type="File" fileName="${basedir}/logs/BattleFront_${shortdate}.log"
+    <target name="battlefrontLogToFile" xsi:type="File" fileName="${basedir}/logs/Campaign_${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
 
     <target name="logconsole" xsi:type="ColoredConsole" layout="${shortdate} ${uppercase:${level}} ${message}" />
