--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -265,6 +265,7 @@
     <Compile Include="World\Battlefronts\Bounty\ImpactMatrixManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandRVRObjectiveTick.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandReward.cs" />
+    <Compile Include="World\Battlefronts\Bounty\RenownBandRVRPairingLock.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandRVRZoneLock.cs" />
     <Compile Include="World\Battlefronts\Bounty\RewardManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\StaticWrapper.cs" />
@@ -496,7 +497,6 @@
     <Content Include="Configs\LocalDevelopment\World.xml" />
     <Content Include="world.ico" />
   </ItemGroup>
-  
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if not exist $(TargetDir)\PatcherFilesDirectory mkdir $(TargetDir)\PatcherFilesDirectory
