updated gitignore to use VS2017

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,7 @@ WarPatcher/Release
 /Common/Common.csproj.bak
 
 *.zip
+
+# VS2017 needed references - maybe c++ parts
+/.vs/WarEmulator/v15/Solution.VC.db-wal
+/.vs/WarEmulator/v15/Solution.VC.db-shm
