Converted playerList to List<KVPair>

--- a/WorldServer.Test/WorldServer.Test.csproj
+++ b/WorldServer.Test/WorldServer.Test.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="LowerTierBattlefrontManagerTest.cs" />
     <Compile Include="CalculateObjectiveRewardScaleTest.cs" />
+    <Compile Include="LootBagBuilderTests.cs" />
     <Compile Include="UpperTierBattlefrontManagerTest.cs" />
     <Compile Include="CommandTest.cs" />
     <Compile Include="LootTests.cs" />
