WIP - changes to reward calculations for rvrzonelock

--- a/WorldServer.Test/WorldServer.Test.csproj
+++ b/WorldServer.Test/WorldServer.Test.csproj
@@ -51,6 +51,8 @@
     <Compile Include="LowerTierBattlefrontManagerTest.cs" />
     <Compile Include="CalculateObjectiveRewardScaleTest.cs" />
     <Compile Include="LootBagBuilderTests.cs" />
+    <Compile Include="RewardSelectorTest.cs" />
+    <Compile Include="LootBagTypeDefinitionTest.cs" />
     <Compile Include="UpperTierBattlefrontManagerTest.cs" />
     <Compile Include="CommandTest.cs" />
     <Compile Include="LootTests.cs" />
