--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -254,12 +254,17 @@
     <Compile Include="World\Battlefronts\AAOTracker.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\BattleFrontStatus.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\IApocCommunications.cs" />
-    <Compile Include="World\Battlefronts\Apocalypse\ILootBagBuilder.cs" />
-    <Compile Include="World\Battlefronts\Apocalypse\IRandomGenerator.cs" />
-    <Compile Include="World\Battlefronts\Apocalypse\LootBagBuilder.cs" />
-    <Compile Include="World\Battlefronts\Apocalypse\LootOption.cs" />
-    <Compile Include="World\Battlefronts\Apocalypse\RandomGenerator.cs" />
-    <Compile Include="World\Battlefronts\Apocalypse\SimpleContribution.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\ILootBagBuilder.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\IRandomGenerator.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\IRewardSelector.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\LootBagBuilder.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\LootBagRarity.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\LootBagTypeDefinition.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\LootOption.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\RandomGenerator.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\RewardAssigner.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\RewardSelector.cs" />
+    <Compile Include="World\Battlefronts\Apocalypse\Loot\SimpleContribution.cs" />
     <Compile Include="World\Battlefronts\ContributionTracker.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\AAOTracker.cs" />
     <Compile Include="World\Battlefronts\Apocalypse\BattlefrontConstants.cs" />
